--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
+    "pg": "^7.7.1",
+    "pg-hstore": "^2.3.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^4.42.0",
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.54",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.54",
@@ -45,12 +51,13 @@
     "@babel/plugin-syntax-import-meta": "7.0.0-beta.54",
     "@babel/polyfill": "^7.0.0-beta.55",
     "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0-beta.55",
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^8.2.6",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.0",
     "webpack-cli": "^3.1.2"
   }
