--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "author": "stuart",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
